@@ -28,9 +28,42 @@ name|search
 operator|.
 name|similarities
 operator|.
+name|ClassicSimilarity
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|similarities
+operator|.
 name|Similarity
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|similarities
+operator|.
+name|TFIDFSimilarity
+import|;
+end_import
+begin_comment
+comment|// javadoc
+end_comment
 begin_import
 import|import
 name|org
@@ -50,48 +83,43 @@ begin_import
 import|import
 name|org
 operator|.
-name|slf4j
+name|apache
 operator|.
-name|Logger
-import|;
-end_import
-begin_import
-import|import
-name|org
+name|solr
 operator|.
-name|slf4j
+name|schema
 operator|.
-name|LoggerFactory
+name|SimilarityFactory
 import|;
 end_import
 begin_comment
-comment|/**  * @deprecated This class has been renamed to<code>ClassicSimilarityFactory</code> to reflect the renaming of the underlying Similarity returned.  *  * @see ClassicSimilarityFactory  */
+comment|/**  * Factory for {@link ClassicSimilarity}  *<p>  * ClassicSimilarity is Lucene's original scoring implementation, based  * upon the Vector Space Model.  *<p>  * Optional settings:  *<ul>  *<li>discountOverlaps (bool): Sets  *       {@link ClassicSimilarity#setDiscountOverlaps(boolean)}</li>  *</ul>  * @see TFIDFSimilarity  * @lucene.experimental  */
 end_comment
 begin_class
-annotation|@
-name|Deprecated
-DECL|class|DefaultSimilarityFactory
+DECL|class|ClassicSimilarityFactory
 specifier|public
 class|class
-name|DefaultSimilarityFactory
-extends|extends
 name|ClassicSimilarityFactory
+extends|extends
+name|SimilarityFactory
 block|{
-DECL|field|log
+comment|/** Init param name for specifying the value to use in     * {@link ClassicSimilarity#setDiscountOverlaps(boolean)}     */
+DECL|field|DISCOUNT_OVERLAPS
 specifier|public
 specifier|static
 specifier|final
-name|Logger
-name|log
+name|String
+name|DISCOUNT_OVERLAPS
 init|=
-name|LoggerFactory
-operator|.
-name|getLogger
-argument_list|(
-name|DefaultSimilarityFactory
-operator|.
-name|class
-argument_list|)
+literal|"discountOverlaps"
+decl_stmt|;
+comment|/**     * Controls the value of {@link ClassicSimilarity#setDiscountOverlaps(boolean)}     * on newly constructed instances of {@link ClassicSimilarity}    */
+DECL|field|discountOverlaps
+specifier|protected
+name|boolean
+name|discountOverlaps
+init|=
+literal|true
 decl_stmt|;
 annotation|@
 name|Override
@@ -111,15 +139,43 @@ argument_list|(
 name|params
 argument_list|)
 expr_stmt|;
-name|log
+name|discountOverlaps
+operator|=
+name|params
 operator|.
-name|warn
+name|getBool
 argument_list|(
-literal|"DefaultSimilarityFactory has been renamed and deprecated.  "
-operator|+
-literal|"Please update your configuration file to refer to ClassicSimilarityFactory instead"
+name|DISCOUNT_OVERLAPS
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|getSimilarity
+specifier|public
+name|Similarity
+name|getSimilarity
+parameter_list|()
+block|{
+name|ClassicSimilarity
+name|sim
+init|=
+operator|new
+name|ClassicSimilarity
+argument_list|()
+decl_stmt|;
+name|sim
+operator|.
+name|setDiscountOverlaps
+argument_list|(
+name|discountOverlaps
+argument_list|)
+expr_stmt|;
+return|return
+name|sim
+return|;
 block|}
 block|}
 end_class
