@@ -121,7 +121,7 @@ name|*
 import|;
 end_import
 begin_comment
-comment|/**  *<p>Factory for {@link SweetSpotSimilarity}.</p>  *<p>  *<code>SweetSpotSimilarity</code> is an extension of   * {@link ClassicSimilarity} that provides additional tuning options for   * specifying the "sweetspot" of optimal<code>tf</code> and   *<code>lengthNorm</code> values in the source data.  *</p>  *<p>  * In addition to the<code>discountOverlaps</code> init param supported by   * {@link DefaultSimilarityFactory} The following sets of init params are   * supported by this factory:  *</p>  *<ul>  *<li>Length Norm Settings:<ul>  *<li><code>lengthNormMin</code> (int)</li>  *<li><code>lengthNormMax</code> (int)</li>  *<li><code>lengthNormSteepness</code> (float)</li>  *</ul></li>  *<li>Baseline TF Settings:<ul>  *<li><code>baselineTfBase</code> (float)</li>  *<li><code>baselineTfMin</code> (float)</li>  *</ul></li>  *<li>Hyperbolic TF Settings:<ul>  *<li><code>hyperbolicTfMin</code> (float)</li>  *<li><code>hyperbolicTfMax</code> (float)</li>  *<li><code>hyperbolicTfBase</code> (double)</li>  *<li><code>hyperbolicTfOffset</code> (float)</li>  *</ul></li>  *</ul>  *<p>  * Note:  *</p>  *<ul>  *<li>If any individual settings from one of the above mentioned sets   *      are specified, then all settings from that set must be specified.  *</li>  *<li>If Baseline TF settings are specified, then Hyperbolic TF settings  *      are not permitted, and vice versa. (The settings specified will   *      determine whether {@link SweetSpotSimilarity#baselineTf} or  *      {@link SweetSpotSimilarity#hyperbolicTf} will be used.  *</li>  *</ul>  *<p>  * Example usage...  *</p>  *<pre class="prettyprint">  *&lt;!-- using baseline TF --&gt;  *&lt;fieldType name="text_baseline" class="solr.TextField"  *            indexed="true" stored="false"&gt;  *&lt;analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/&gt;  *&lt;similarity class="solr.SweetSpotSimilarityFactory"&gt;  *&lt;!-- TF --&gt;  *&lt;float name="baselineTfMin"&gt;6.0&lt;/float&gt;  *&lt;float name="baselineTfBase"&gt;1.5&lt;/float&gt;  *&lt;!-- plateau norm --&gt;  *&lt;int name="lengthNormMin"&gt;3&lt;/int&gt;  *&lt;int name="lengthNormMax"&gt;5&lt;/int&gt;  *&lt;float name="lengthNormSteepness"&gt;0.5&lt;/float&gt;  *&lt;/similarity&gt;  *&lt;/fieldType&gt;  *   *&lt;!-- using hyperbolic TF --&gt;  *&lt;fieldType name="text_hyperbolic" class="solr.TextField"  *            indexed="true" stored="false"&gt;  *&lt;analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/&gt;  *&lt;similarity class="solr.SweetSpotSimilarityFactory"&gt;  *&lt;float name="hyperbolicTfMin"&gt;3.3&lt;/float&gt;  *&lt;float name="hyperbolicTfMax"&gt;7.7&lt;/float&gt;  *&lt;double name="hyperbolicTfBase"&gt;2.718281828459045&lt;/double&gt;&lt;!-- e --&gt;  *&lt;float name="hyperbolicTfOffset"&gt;5.0&lt;/float&gt;  *&lt;!-- plateau norm, shallower slope --&gt;  *&lt;int name="lengthNormMin"&gt;1&lt;/int&gt;  *&lt;int name="lengthNormMax"&gt;5&lt;/int&gt;  *&lt;float name="lengthNormSteepness"&gt;0.2&lt;/float&gt;  *&lt;/similarity&gt;  *&lt;/fieldType&gt;  *</pre>  * @see SweetSpotSimilarity The javadocs for the individual methods in   *<code>SweetSpotSimilarity</code> for SVG diagrams showing how the   *      each function behaves with various settings/inputs.  */
+comment|/**  *<p>Factory for {@link SweetSpotSimilarity}.</p>  *<p>  *<code>SweetSpotSimilarity</code> is an extension of   * {@link ClassicSimilarity} that provides additional tuning options for   * specifying the "sweetspot" of optimal<code>tf</code> and   *<code>lengthNorm</code> values in the source data.  *</p>  *<p>  * In addition to the<code>discountOverlaps</code> init param supported by   * {@link ClassicSimilarityFactory} The following sets of init params are   * supported by this factory:  *</p>  *<ul>  *<li>Length Norm Settings:<ul>  *<li><code>lengthNormMin</code> (int)</li>  *<li><code>lengthNormMax</code> (int)</li>  *<li><code>lengthNormSteepness</code> (float)</li>  *</ul></li>  *<li>Baseline TF Settings:<ul>  *<li><code>baselineTfBase</code> (float)</li>  *<li><code>baselineTfMin</code> (float)</li>  *</ul></li>  *<li>Hyperbolic TF Settings:<ul>  *<li><code>hyperbolicTfMin</code> (float)</li>  *<li><code>hyperbolicTfMax</code> (float)</li>  *<li><code>hyperbolicTfBase</code> (double)</li>  *<li><code>hyperbolicTfOffset</code> (float)</li>  *</ul></li>  *</ul>  *<p>  * Note:  *</p>  *<ul>  *<li>If any individual settings from one of the above mentioned sets   *      are specified, then all settings from that set must be specified.  *</li>  *<li>If Baseline TF settings are specified, then Hyperbolic TF settings  *      are not permitted, and vice versa. (The settings specified will   *      determine whether {@link SweetSpotSimilarity#baselineTf} or  *      {@link SweetSpotSimilarity#hyperbolicTf} will be used.  *</li>  *</ul>  *<p>  * Example usage...  *</p>  *<pre class="prettyprint">  *&lt;!-- using baseline TF --&gt;  *&lt;fieldType name="text_baseline" class="solr.TextField"  *            indexed="true" stored="false"&gt;  *&lt;analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/&gt;  *&lt;similarity class="solr.SweetSpotSimilarityFactory"&gt;  *&lt;!-- TF --&gt;  *&lt;float name="baselineTfMin"&gt;6.0&lt;/float&gt;  *&lt;float name="baselineTfBase"&gt;1.5&lt;/float&gt;  *&lt;!-- plateau norm --&gt;  *&lt;int name="lengthNormMin"&gt;3&lt;/int&gt;  *&lt;int name="lengthNormMax"&gt;5&lt;/int&gt;  *&lt;float name="lengthNormSteepness"&gt;0.5&lt;/float&gt;  *&lt;/similarity&gt;  *&lt;/fieldType&gt;  *   *&lt;!-- using hyperbolic TF --&gt;  *&lt;fieldType name="text_hyperbolic" class="solr.TextField"  *            indexed="true" stored="false"&gt;  *&lt;analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/&gt;  *&lt;similarity class="solr.SweetSpotSimilarityFactory"&gt;  *&lt;float name="hyperbolicTfMin"&gt;3.3&lt;/float&gt;  *&lt;float name="hyperbolicTfMax"&gt;7.7&lt;/float&gt;  *&lt;double name="hyperbolicTfBase"&gt;2.718281828459045&lt;/double&gt;&lt;!-- e --&gt;  *&lt;float name="hyperbolicTfOffset"&gt;5.0&lt;/float&gt;  *&lt;!-- plateau norm, shallower slope --&gt;  *&lt;int name="lengthNormMin"&gt;1&lt;/int&gt;  *&lt;int name="lengthNormMax"&gt;5&lt;/int&gt;  *&lt;float name="lengthNormSteepness"&gt;0.2&lt;/float&gt;  *&lt;/similarity&gt;  *&lt;/fieldType&gt;  *</pre>  * @see SweetSpotSimilarity The javadocs for the individual methods in   *<code>SweetSpotSimilarity</code> for SVG diagrams showing how the   *      each function behaves with various settings/inputs.  */
 end_comment
 begin_class
 DECL|class|SweetSpotSimilarityFactory
@@ -129,7 +129,7 @@ specifier|public
 class|class
 name|SweetSpotSimilarityFactory
 extends|extends
-name|DefaultSimilarityFactory
+name|ClassicSimilarityFactory
 block|{
 DECL|field|sim
 specifier|private
