@@ -16,34 +16,46 @@
  limitations under the License.
 -->
 
-<!-- Test schema file for DefaultSimilarityFactory -->
+<!-- Test schema file for ClassicSimilarityFactory specified on a per-fieldtype basis
+     See TestClassicSimilarityFactory
+-->
 
 <schema name="test" version="1.0">
-  <types>
-    <fieldType name="int" class="solr.TrieIntField" precisionStep="0" omitNorms="true" positionIncrementGap="0"/>
 
-    <!-- TF/IDF -->
-    <fieldType name="text" class="solr.TextField">
-      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
-      <similarity class="solr.DefaultSimilarityFactory"/>
-    </fieldType>
+  <!-- testDefaults -->
+  <field name="text" type="text" indexed="true" stored="false"/>
+  <fieldType name="text" class="solr.TextField">
+    <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+    <similarity class="solr.ClassicSimilarityFactory"/>
+  </fieldType>
+  
+  <!-- testParams -->
+  <field name="text_overlap" type="text_overlap" indexed="true" stored="false"/>
+  <fieldType name="text_overlap" class="solr.TextField">
+    <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+    <similarity class="solr.ClassicSimilarityFactory">
+      <bool name="discountOverlaps">false</bool>
+    </similarity>
+  </fieldType>
 
-    <!-- TF/IDF -->
-    <fieldType name="text_overlap" class="solr.TextField">
-      <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
-      <similarity class="solr.DefaultSimilarityFactory">
-        <bool name="discountOverlaps">false</bool>
-      </similarity>
-    </fieldType>
-   
-  </types>
+  <!-- testDefaultWithDefaults -->
+  <field name="text__default" type="text__default" indexed="true" stored="false"/>
+  <fieldType name="text__default" class="solr.TextField">
+    <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+    <similarity class="solr.DefaultSimilarityFactory"/>
+  </fieldType>
+  
+  <!-- testDefaultWithParams -->
+  <field name="text_overlap__default" type="text_overlap__default" indexed="true" stored="false"/>
+  <fieldType name="text_overlap__default" class="solr.TextField">
+    <analyzer class="org.apache.lucene.analysis.standard.StandardAnalyzer"/>
+    <similarity class="solr.DefaultSimilarityFactory">
+      <bool name="discountOverlaps">false</bool>
+    </similarity>
+  </fieldType>
 
-  <fields>
-    <field name="id" type="int" indexed="true" stored="true" multiValued="false" required="false"/>
-    <field name="text" type="text" indexed="true" stored="false"/>
-    <field name="text_overlap" type="text_overlap" indexed="true" stored="false"/>
-  </fields>
-
+  <field name="id" type="int" indexed="true" stored="true" multiValued="false" required="false"/>
+  <fieldType name="int" class="solr.TrieIntField" precisionStep="0" omitNorms="true" positionIncrementGap="0"/>
   <defaultSearchField>text</defaultSearchField>
   <uniqueKey>id</uniqueKey>
   <similarity class="solr.SchemaSimilarityFactory"/>
