@@ -56,13 +56,13 @@ name|BeforeClass
 import|;
 end_import
 begin_comment
-comment|/**  * Tests {@link DefaultSimilarityFactory}  */
+comment|/**  * Tests {@link DefaultSimilarityFactory} when specified on a per-fieldtype basis with various init options.  * @see SchemaSimilarityFactory  */
 end_comment
 begin_class
-DECL|class|TestDefaultSimilarityFactory
+DECL|class|TestClassicSimilarityFactory
 specifier|public
 class|class
-name|TestDefaultSimilarityFactory
+name|TestClassicSimilarityFactory
 extends|extends
 name|BaseSimilarityTestCase
 block|{
@@ -85,7 +85,7 @@ literal|"schema-tfidf.xml"
 argument_list|)
 expr_stmt|;
 block|}
-comment|/** default parameters */
+comment|/** Classic w/ default parameters */
 DECL|method|testDefaults
 specifier|public
 name|void
@@ -94,43 +94,30 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|Similarity
+name|ClassicSimilarity
 name|sim
 init|=
 name|getSimilarity
 argument_list|(
 literal|"text"
+argument_list|,
+name|ClassicSimilarity
+operator|.
+name|class
 argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
-name|ClassicSimilarity
-operator|.
-name|class
-argument_list|,
-name|sim
-operator|.
-name|getClass
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
 literal|true
 argument_list|,
-operator|(
-operator|(
-name|ClassicSimilarity
-operator|)
 name|sim
-operator|)
 operator|.
 name|getDiscountOverlaps
 argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-comment|/** explicit params */
+comment|/** Classic w/ explicit params */
 DECL|method|testParams
 specifier|public
 name|void
@@ -139,36 +126,87 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|Similarity
+name|ClassicSimilarity
 name|sim
 init|=
 name|getSimilarity
 argument_list|(
 literal|"text_overlap"
+argument_list|,
+name|ClassicSimilarity
+operator|.
+name|class
 argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
-name|ClassicSimilarity
-operator|.
-name|class
+literal|false
 argument_list|,
 name|sim
 operator|.
-name|getClass
+name|getDiscountOverlaps
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+comment|/** Default w/ default parameters */
+DECL|method|testDefaultWithDefaults
+specifier|public
+name|void
+name|testDefaultWithDefaults
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ClassicSimilarity
+name|sim
+init|=
+name|getSimilarity
+argument_list|(
+literal|"text__default"
+argument_list|,
+name|ClassicSimilarity
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|true
+argument_list|,
+name|sim
+operator|.
+name|getDiscountOverlaps
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** Default w/ explicit params */
+DECL|method|testDefaultWithParams
+specifier|public
+name|void
+name|testDefaultWithParams
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ClassicSimilarity
+name|sim
+init|=
+name|getSimilarity
+argument_list|(
+literal|"text_overlap__default"
+argument_list|,
+name|ClassicSimilarity
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 name|assertEquals
 argument_list|(
 literal|false
 argument_list|,
-operator|(
-operator|(
-name|ClassicSimilarity
-operator|)
 name|sim
-operator|)
 operator|.
 name|getDiscountOverlaps
 argument_list|()
